--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 */1 * * *'
+    - cron: '*/5 * * * *'
   workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
