--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Check for changes
       id: check_changes
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git config --global user.name 'MinecraftBedrockArabic'
+        git config --global user.email 'minecraftbedrockarabic@gmail.com'
         git add -A  # Stage all changes in the repository
         if git diff-index --quiet HEAD; then
           echo "No changes detected"
